Refactor project structure and improve tooling
- Remove application.ex (no supervision needed)
- Enhance .gitignore with dev/IDE files and research documents
- Fix MoondreamApi to use environment variable fallback
- Rename image_info to image_metadata for clarity
- Fix module name references (CodeAgentEx -> CodeAgentExTools)
- Remove unused variables warnings
- Add MIT License file

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,45 @@ code_agent_ex_tools-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+.devenv
+.direnv
+.envrc
+devenv.local.nix
+
+# Environment variables and secrets
+.env
+.env.local
+*.secret
+
+# Editor and IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Elixir Language Server
+.elixir_ls/
+
+# Test coverage
+coverage/
+
+# Local test outputs
+test_*.exs.output
+
+# Research and development files
+*_RESEARCH*.md
+*_ANALYSIS*.md
+*_SUMMARY.txt
+*_MAPPING.md
+*_SNIPPETS.md
+*_CREATED.txt
+*_APPROACHES.md
+*_API.md
+*_COMMUNICATION.md
+*_MECHANISM.md
+
+# Local test scripts (not part of mix test)
+test_*.exs
+!test/
